Updated localization for IT and RU

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_it.json
@@ -407,13 +407,13 @@
 	"msg_continue": "Continua",
 	"menu_import_fields": "Importa campi",
 	"label_back": "Indietro",
-	"msg_warning_clear_stacks": "Stai per eliminare tutte le Pile.",
+	"msg_warning_clear_stacks": "Stai per eliminare tutte le Risme.",
 	"msg_warning_clear_rez": "Stai per eliminare tutte le catene Rez.",
 	"msg_warning_clear_track": "Stai per eliminare tutte le Tracce.",
 	"msg_warning_clear_chains": "Stai per eliminare tutte le Catene.",
 	"msg_warning_clear_focused_chain": "Stai per eliminare questa catena.",
 	"masg_warning_layer_link": "Stai per sovrascrivere un collegamento.",
-	"msg_warning_merge_stacks": "Stai per unire queste due Pile.",
+	"msg_warning_merge_stacks": "Stai per unire queste due Risme.",
 	"msg_warning_merge_chains": "Stai per unire queste due Catene.",
 	"msg_stacks_created-1": "Hai creato",
 	"msg_stacks_created-2": "Catene.\nSostituire con una risma automatica? (Azione non può essere annullata)",
@@ -437,7 +437,7 @@
 	"menu_save-as": "Salva come",
 	"menu_delete-all": "Elimina tutto",
 	"menu_track_chains_pl": "Tracce",
-	"menu_stacks_pl": "Pile",
+	"menu_stacks_pl": "risme",
 	"menu_rez_chains_pl": "Catene di risonanza",
 	"menu_chains_pl": "Catene",
 	"menu_window": "Finestra",
@@ -457,7 +457,7 @@
 	"menu_random": "Ordine casuale",
 	"menu_stacktab": "Scheda risma",
 	"menu_show": "Presentazione",
-	"menu_stacker": "Creatore Pile",
+	"menu_stacker": "Creatore Risme",
 	"menu_settings": "Impostazioni",
 	"menu_wide": "Allarga",
 	"menu_narrow": "Restringi",
@@ -486,10 +486,11 @@
 	"menu_off": "Disattiva",
 	"menu_read": "Modalità lettura",
     "text_dir": "Direzione del testo",
-    "word_tip": "Estremità della parola",
+    "word_tip": "Informazioni parola",
     "arrheads": "Frecce",
     "unit_delim": "Delimitatore unità",
-    "unit_start": "Inizion unità",
+    "unit_start": "Inizio unità",
+	"unit_end" : "Termine unità",
     "participant": "Partecipante",
     "turn_delim": "Delimitatore turno",
     "mark": "Marcatura",
