--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -122,6 +122,16 @@
 	"option_recolor" : "Recolor",
 	"option_clip" : "Clip",
 	"option_create-tree" : "Create tree",
+	"option_create-tree-unit" : "Tree from unit",
+	"option_create-tree-stack" : "Tree from stack",
+	"option_remove-from-stack" : "Remove from stack",
+	"option_remove-from-trail" : "Remove from trail",
+	"option_remove-from-resonance" : "Remove from resonance",
+	"option_rename-trail" : "Rename trail",
+	"option_rename-resonance" : "Rename resonance",
+	"option_split-token" : "Split token",
+	"option_merge-token" : "Merge token",
+	"option_split-unit" : "Split unit",
 	"option_current-chain" : "Current chain",
 	"option_trails" : "Trails",
 	"import_field-info" : "Field info",
@@ -136,7 +146,7 @@
 	"menu_left-to-right" : "Left-to-right (LTR)",
 	"menu_right-to-left" : "Right-to-left (RTL)",
 	"option_zero-0" : "<0>",
-	"option_zero" : "<ZERO>",
+	"option_zero" : "Insert <ZERO>",
 	"option_pronoun" : "<PRO>",
 	"option_custom" : "Custom",
 	"option_red" : "Red",
@@ -153,6 +163,10 @@
 	"option_delete-chunk" : "Delete chunk",
 	"option_new-token" : "New token",
 	"option_delete-token" : "Delete token",
+	"option_merge-unit" : "Merge unit up",
+	"option_move-unit-up" : "Move unit up",
+	"option_move-unit-down" : "Move unit down",
+	"option_sync-unit-tab" : "Sync to unit tab",
 	"locale_code" : "en",
 	"msg_warning_import_error" : "Error: File type not supported",
 	"msg_create_tag" : "Create new tag",
