Right click menu enhancements part 1

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -127,6 +127,7 @@
 	"option_remove-from-stack" : "Remove from stack",
 	"option_remove-from-trail" : "Remove from trail",
 	"option_remove-from-resonance" : "Remove from resonance",
+	"option_rename-stack" : "Rename stack",
 	"option_rename-trail" : "Rename trail",
 	"option_rename-resonance" : "Rename resonance",
 	"option_split-token" : "Split token",
@@ -260,6 +261,7 @@
 	"help_label_quicklink" : "Quick links",
 	"help_label_quickstack" : "Quick stack",
 	"help_label_new_word" : "Insert word",
+	"help_label_new_token" : "Insert token",
 	"help_label_box" : "Box",
 	"help_label_delete_chain" : "Delete chain",
 	"help_label_pick" : "Pick",
