Updating GM version + delete from stack fix

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -472,6 +472,7 @@
 	"menu_turn" : "Turn",
 	"menu_sentence" : "Sentence",
 	"menu_random" : "Random",
+	"menu_utterance" : "Utterance",
 	"menu_stacktab" : "Stack tab",
 	"menu_show" : "Show",
 	"menu_stacker" : "Stacker",
