Extend chunk from token

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -119,8 +119,8 @@
 	"option_delete-entry" : "Delete entry",
 	"option_delete-branch" : "Delete branch",
 	"option_separate-chunk" : "Separate chunk into tokens",
-	"option_extend-chunk-next" : "Extend to next token",
-	"option_extend-chunk-previous" : "Extend to previous token",
+	"option_extend-chunk-next" : "Extend chunk to next token",
+	"option_extend-chunk-previous" : "Extend chunk to previous token",
 	"option_remove-chunk-start" : "Remove token from start of chunk",
 	"option_remove-chunk-end" : "Remove token from end of chunk",
 	"option_recolor" : "Recolor",
