--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -523,6 +523,10 @@
 	"menu_read" : "Read",
 	"menu_open-rez-folder-windows" : "Open REZ folder in Explorer",
 	"menu_open-rez-folder-macos" : "Open REZ folder in Finder",
+	"menu_show-file-windows" : "Show file in Explorer",
+	"menu_show-file-macos" : "Show file in Finder",
+	"menu_copy-filepath" : "Copy file path",
+	"menu_remove-quick-access" : "Remove from Quick Access",
     "text_dir" : "Text Direction",
     "word_tip" : "Word Tip",
     "arrheads" : "Arrowheads",
@@ -567,6 +571,7 @@
 	"msg_remove" : "Remove",
 	"tag_unknown" : "n/a",
 	"label_schema" : "Schema",
+	"psent_delim" : "Utterance",
 	"search_multiple_terms" : "Use & to search multiple terms",
 	"searched_words" : "Searched Words",
 	"option_deselect-all" : "Deselect all",
