Help checkmark + check update option

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -193,6 +193,7 @@
 	"menu_filter-context" : "Context",
 	"menu_pick" : "Pick",
 	"menu_help" : "Help",
+	"menu_check-updates" : "Check for updates",
 	"menu_guide" : "Guide",
 	"menu_about" : "About",
 	"menu_track" : "Track",
