Fixing website buttons for Windows

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -589,7 +589,7 @@
 	"msg_clear-stacks" : "Clear stacks",
 	"msg_new-version-available" : "A new version of Rezonator is available! Would you like to download it?",
 	"msg_version-up-to-date" : "You are currently using the latest version of Rezonator",
-	"msg_open-url-about" : "Go to website: rezonator.com",
+	"msg_open-url-about" : "Go to website: rezonator.com/about/",
 	"msg_open-url-guide" : "Go to website: johnwdubois.github.io/rezonator/",
 	"label_version" : "Version"
 }
