Updating help: settings section

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -229,6 +229,8 @@
 	"help_description_align" : "Align current track",
 	"help_description_search-word" : "Search for word",
 	"help_description_justify" : "Select justification",
+	"help_description_prose" : "Prose vs. grid display",
+	"help_description_prose" : "Word tips (show/hide)",
 	"help_description_decrease" : "Decrease column width",
 	"help_description_increase" : "Increase column width",
 	"help_description_decrease-height" : "Decrease line height",
@@ -328,15 +330,15 @@
 	"key_quickstack" : "[Drag line]",
 	"key_insert-word" : "n",
 	"key_box" : "b",
-	"key_search" : "f",
+	"key_search" : "CTRL f",
 	"key_change-view" : "v",
-	"key_word-format" : "w",
+	"key_word-format" : "SHIFT w",
 	"key_narrow-columns" : "CTRL [minus]",
 	"key_wide-columns" : "CTRL [plus]",
 	"key_low-rows" : "SHIFT [minus]",
 	"key_tall-rows" : "SHIFT [plus]",
 	"key_theme" : "CTRL b",
-	"key_save" : "CTRL-s",
+	"key_save" : "CTRL s",
 	"key_move-up" : "↑",
 	"key_move-down" : "↓",
 	"key_move-left" : "←",
