Updating help: shortcuts

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -230,7 +230,7 @@
 	"help_description_search-word" : "Search for word",
 	"help_description_justify" : "Select justification",
 	"help_description_prose" : "Prose vs. grid display",
-	"help_description_prose" : "Word tips (show/hide)",
+	"help_description_word-tip" : "Word tips (show/hide)",
 	"help_description_decrease" : "Decrease column width",
 	"help_description_increase" : "Increase column width",
 	"help_description_decrease-height" : "Decrease line height",
@@ -254,7 +254,6 @@
 	"help_description_rezonator-dot-com" : "Go to Rezonator.com for information",
 	"help_description_delete-new-word" : "Delete inserted word",
 	"help_description_caption" : "Add stack caption",
-	"help_description_focus" : "Select word",
 	"help_description_quit-chain" : "Quit adding words to chain",
 	"help_description_zap" : "Delete word from chain",
 	"help_description_view-select" : "Select view",
@@ -265,6 +264,18 @@
 	"help_description_tall" : "Increase line height",
 	"help_description_find-all" : "Find all instances of a word",
 	"help_description_go-to-line" : "Go to line",
+	"help_description_remove-from-chain" : "Remove from chain",
+	"help_shortcut_track-tool" : "Track tool",
+	"help_shortcut_resonance-tool" : "Resonance tool",
+	"help_shortcut_pick" : "Filter current chain",
+	"help_shortcut_navigation-pane" : "Navigation pane (show/hide)",
+	"help_shortcut_justify" : "Justify (left/right)",
+	"help_shortcut_text-direction" : "Text direction (RTL/LTR)",	
+	"help_shortcut_wordform-display" : "Select wordform display",
+	"help_shortcut_edit-wordform-options" : "Edit list of wordform options",
+	"help_shortcut_zero-before" : "Insert zero before",
+	"help_shortcut_zero-after" : "Insert zero before",
+	"help_shortcut_find-all" : "Find all",
 	"help_label_link" : "Link",
 	"help_label_quit-chain" : "Quit chain",
 	"help_label_delete-link" : "Delete link",
@@ -321,6 +332,7 @@
 	"help_label_short" : "Short",
 	"help_label_tall-rows" : "Tall",
 	"help_label_find" : "Find",
+	"help_label_shortcuts" : "Keyboard shortcuts",
 	"key_word_click" : "Click",
 	"key_quit-chain" : "Esc",
 	"key_rez" : "r",
