Home button pt 1

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -271,10 +271,10 @@
 	"help_shortcut_navigation-pane" : "Navigation pane (show/hide)",
 	"help_shortcut_justify" : "Justify (left/right)",
 	"help_shortcut_text-direction" : "Text direction (RTL/LTR)",	
-	"help_shortcut_wordform-display" : "Select wordform display",
+	"help_shortcut_wordform-display" : "Wordform display",
 	"help_shortcut_edit-wordform-options" : "Edit list of wordform options",
 	"help_shortcut_zero-before" : "Insert zero before",
-	"help_shortcut_zero-after" : "Insert zero before",
+	"help_shortcut_zero-after" : "Insert zero after",
 	"help_shortcut_find-all" : "Find all",
 	"help_label_link" : "Link",
 	"help_label_quit-chain" : "Quit chain",
@@ -344,7 +344,7 @@
 	"key_box" : "b",
 	"key_search" : "CTRL f",
 	"key_change-view" : "v",
-	"key_word-format" : "SHIFT w",
+	"key_word-format" : "w",
 	"key_narrow-columns" : "CTRL [minus]",
 	"key_wide-columns" : "CTRL [plus]",
 	"key_low-rows" : "SHIFT [minus]",
