--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -199,6 +199,7 @@
 	"menu_track" : "Track",
 	"menu_resonance" : "Resonance",
 	"menu_stack" : "Stack",
+	"menu_home" : "Home",
 	"msg_file_audio" : "Select audio file (*.ogg)",
 	"msg_warning_save-prompt" : "Save before exiting?",
 	"msg_warning_saving" : "Saving…",
@@ -493,10 +494,12 @@
 	"menu_chains_pl" : "Chains",
 	"menu_window" : "Window",
 	"menu_nav" : "Nav",
+	"menu_navigation" : "Navigation",
 	"menu_grid" : "Grid",
 	"menu_left" : "Left",
 	"menu_right" : "Right",
 	"menu_tools" : "Tools",
+	"menu_toolbar" : "Toolbar",
 	"menu_all" : "All",
 	"menu_above" : "Above",
 	"menu_between" : "Between",
