Ask about deleting chunk

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -169,6 +169,7 @@
 	"tag_group" : "Group",
 	"option_set-chain-name" : "Set chain name",
 	"option_delete-chunk" : "Delete chunk",
+	"option_delete-chunk-aswell" : "Delete chunk as well?",
 	"option_new-token" : "New token",
 	"option_delete-token" : "Delete token",
 	"option_merge-unit" : "Merge unit up",
@@ -183,7 +184,6 @@
 	"menu_view" : "View",
 	"menu_search" : "Search",
 	"menu_filter" : "Filter",
-	"menu_stack" : "Stack",
 	"menu_options" : "Options",
 	"menu_save" : "Save",
 	"menu_export" : "Export",
