Using locale for view display

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -184,6 +184,7 @@
 	"menu_view" : "View",
 	"menu_search" : "Search",
 	"menu_filter" : "Filter",
+	"menu_quick-filter" : "Quick Filter",
 	"menu_options" : "Options",
 	"menu_save" : "Save",
 	"menu_export" : "Export",
