--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -577,6 +577,7 @@
     "menu_main" : "Main",
     "name" : "Name",
     "nest" : "Nest",
+	"lock" : "Lock",
     "chain_count" : "Chain Count",
     "unit_count" : "Unit Count",
     "start" : "Start",
