--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -613,7 +613,9 @@
 	"msg_clear-stacks" : "Clear stacks",
 	"msg_size-slider" : "Size control",
 	"option_column" : "Columns",
-	"option_row" : "Rows",
+	"option_column-width" : "Column width",
+	"option_prose-width" : "Prose width",
+	"option_row-height" : "Row height",
 	"msg_new-version-available" : "A new version of Rezonator is available! Would you like to download it?",
 	"msg_version-up-to-date" : "You are currently using the latest version of Rezonator",
 	"msg_open-url-about" : "Go to website: rezonator.com/about/",
