--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -612,8 +612,8 @@
 	"msg_clear-resonance": "Clear resonance chains",
 	"msg_clear-stacks": "Clear stacks",
 	"msg_size-slider": "Size control",
-	"msg_name-new-stacktype": "Name the new stack type",
-	"msg_stacktype-not-active": "This stack type is not active. Activate?",
+	"msg_name-new-stacking": "Name the new stacking",
+	"msg_stacking-not-active": "This stacking is not active. Activate?",
 	"option_column": "Columns",
 	"option_column-width": "Column width",
 	"option_prose-width": "Prose width",
