Scroll nav to stack within stacking

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -575,7 +575,6 @@
 	"encountered_fields": "Encountered Fields",
 	"1-1field_lst": "1-to-1 Field List",
 	"total_tok_count": "Total Token Count",
-	"block_count": "Block Count",
 	"menu_main": "Main",
 	"name": "Name",
 	"nest": "Nest",
@@ -591,6 +590,7 @@
 	"import_type_transcription": "Transcription",
 	"import_type_elan": "Elan (tab-delimited)",
 	"import_type_interlinear": "Interlinear Glossed Text",
+	"import_type_aichat": "AI Chat (e.g. ChatGPT)",
 	"msg_load-schema": "Load import schema",
 	"msg_save-schema": "Save import schema",
 	"msg_remove": "Remove",
