Naming stacking and stacking stacks

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -209,7 +209,6 @@
 	"menu_clique": "Clique",
 	"menu_go-to-line": "Go to line",
 	"menu_go-to-time": "Go to time",
-	"menu_stacker": "Create stacks",
 	"menu_justify": "Justify",
 	"menu_prose": "Prose",
 	"menu_hide": "Hide",
@@ -612,7 +611,9 @@
 	"msg_clear-resonance": "Clear resonance chains",
 	"msg_clear-stacks": "Clear stacks",
 	"msg_size-slider": "Size control",
+	"msg_name-stacker": "Name the new stacking and the new stacks",
 	"msg_name-new-stacking": "Name the new stacking",
+	"option_new-stacking": "New blank stacking",
 	"msg_stacking-not-active": "This stacking is not active. Activate?",
 	"option_column": "Columns",
 	"option_column-width": "Column width",
