Finishing up some ai functions

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -619,7 +619,8 @@
 	"option_column-width": "Column width",
 	"option_prose-width": "Prose width",
 	"option_row-height": "Row height",
-	"option_import-clipboard": "Import from clipboard",
+	"option_import-clipboard": "From clipboard",
+	"option_import-file": "From file",
 	"msg_new-version-available": "A new version of Rezonator is available! Would you like to download it?",
 	"msg_version-up-to-date": "You are currently using the latest version of Rezonator",
 	"msg_open-url-about": "Go to website: rezonator.com/about/",
