--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -480,6 +480,7 @@
 	"question_save_before_import": "Save before importing new file?",
 	"question_save_before_open": "Save before opening file?",
 	"question_save_before_exit": "Save before exiting?",
+	"question_save_before_aichat": "Save before returning to AI chat?",
 	"question_delete-chunk": "Would you like to delete this chunk?",
 	"msg_numbers_only": "Error: Numbers only",
 	"msg_input_any_number": "Insert number",
@@ -590,6 +591,7 @@
 	"import_type_elan": "Elan (tab-delimited)",
 	"import_type_interlinear": "Interlinear Glossed Text",
 	"import_type_aichat": "AI Chat (e.g. ChatGPT)",
+	"option_aichat": "AI chat",
 	"msg_load-schema": "Load import schema",
 	"msg_save-schema": "Save import schema",
 	"msg_remove": "Remove",
