--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -624,6 +624,8 @@
 	"option_row-height": "Row height",
 	"option_import-clipboard": "From clipboard",
 	"option_import-file": "From file",
+	"option_copy-to-clipboard": "Copy to clipboard",
+	"option_submit-prompt": "Submit prompt",
 	"msg_new-version-available": "A new version of Rezonator is available! Would you like to download it?",
 	"msg_version-up-to-date": "You are currently using the latest version of Rezonator",
 	"msg_open-url-about": "Go to website: rezonator.com/about/",
