String and keystroke fixes

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -620,9 +620,10 @@
 	"option_new-stacking": "New blank stacking",
 	"msg_stacking-not-active": "This stacking is not active. Activate?",
 	"option_column": "Columns",
-	"option_column-width": "Column width",
+	"option_text-size": "Text size",
+	"option_column-width": "Grid width",
 	"option_prose-width": "Prose width",
-	"option_row-height": "Row height",
+	"option_row-height": "Line height",
 	"option_import-clipboard": "From clipboard",
 	"option_import-file": "From file",
 	"option_copy-to-clipboard": "Copy to clipboard",
