--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -456,10 +456,10 @@
 	"msg_warning_clear_rez": "You are about to clear all Rez chains.",
 	"msg_warning_clear_track": "You are about to clear all Track chains.",
 	"msg_warning_clear_chains": "You are about to clear all of your chains.",
-	"msg_warning_clear_focused_chain": "You are about to clear this chain.",
-	"msg_warning_clear_focused_stack": "You are about to clear this Stack.",
-	"msg_warning_clear_focused_resonance": "You are about to clear this Resonance.",
-	"msg_warning_clear_focused_trail": "You are about to clear this Trail.",
+	"msg_warning_clear_focused_chain": "Delete this chain?",
+	"msg_warning_clear_focused_stack": "Delete this Stack?",
+	"msg_warning_clear_focused_resonance": "Delete this Resonance?",
+	"msg_warning_clear_focused_trail": "Delete this Trail?",
 	"masg_warning_layer_link": "You are about to layer one link atop another.",
 	"msg_warning_merge_stacks": "You are about to merge these two stacks together.",
 	"msg_warning_merge_trails": "You are about to merge these two trails (track chains) together.",
