Trail layers pt 1

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -617,7 +617,9 @@
 	"msg_size-slider": "Size control",
 	"msg_name-stacker": "Name the new stacking and the new stacks",
 	"msg_name-new-stacking": "Name the new stacking",
+	"msg_name-new-trail-layer": "Name the new Trail layer",
 	"option_new-stacking": "New blank stacking",
+	"option_new-trail-layer": "New Trail layer",
 	"msg_stacking-not-active": "This stacking is not active. Activate?",
 	"option_column": "Columns",
 	"option_text-size": "Text size",
