Resonance layers pt 1

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -618,8 +618,10 @@
 	"msg_name-stacker": "Name the new stacking and the new stacks",
 	"msg_name-new-stacking": "Name the new stacking",
 	"msg_name-new-trail-layer": "Name the new Trail layer",
+	"msg_name-new-resonance-layer": "Name the new Resonance layer",
 	"option_new-stacking": "New blank stacking",
 	"option_new-trail-layer": "New Trail layer",
+	"option_new-resonance-layer": "New Resonance layer",
 	"msg_stacking-not-active": "This stacking is not active. Activate?",
 	"option_column": "Columns",
 	"option_text-size": "Text size",
