Tooltips for active layer

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -551,6 +551,9 @@
 	"menu_restore-autosave": "Restore autosave",
 	"menu_copy-filepath": "Copy file path",
 	"menu_remove-quick-access": "Remove from Quick Access",
+	"menu_layer_stack": "Stack layer",
+	"menu_layer_trail": "Trail layer",
+	"menu_layer_resonance": "Resonance layer",
 	"text_dir": "Text Direction",
 	"word_tip": "Word Tip",
 	"unit_tip": "Unit Tip",
@@ -615,14 +618,14 @@
 	"msg_clear-resonance": "Clear resonance chains",
 	"msg_clear-stacks": "Clear stacks",
 	"msg_size-slider": "Size control",
-	"msg_name-stacker": "Name the new stacking and the new stacks",
-	"msg_name-new-stacking": "Name the new stacking",
+	"msg_name-stacker": "Name the new stack layer and the new stacks",
+	"msg_name-new-stacking": "Name the new stack layer",
 	"msg_name-new-trail-layer": "Name the new Trail layer",
 	"msg_name-new-resonance-layer": "Name the new Resonance layer",
-	"option_new-stacking": "New blank stacking",
+	"option_new-stacking": "New blank stack layer",
 	"option_new-trail-layer": "New Trail layer",
 	"option_new-resonance-layer": "New Resonance layer",
-	"msg_stacking-not-active": "This stacking is not active. Activate?",
+	"msg_stacking-not-active": "This stack layer is not active. Activate?",
 	"option_column": "Columns",
 	"option_text-size": "Text size",
 	"option_column-width": "Grid width",
