--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -493,8 +493,8 @@
 	"menu_delete-all": "Delete all",
 	"menu_track_chains_pl": "Trails",
 	"menu_stacks_pl": "Stacks",
-	"menu_rez_chains_pl": "Resonance chains",
-	"menu_chains_pl": "Chains",
+	"menu_rez_chains_pl": "Resonances",
+	"menu_chains_pl": "Trails, resonances and stacks",
 	"menu_window": "Window",
 	"menu_nav": "Nav",
 	"menu_navigation": "Navigation",
